k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: listee-redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: listee-redis
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: listee-postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: listee-postgres
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: listee-backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: listee-backend
